; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_ib/extr_mlx5_ib_mr.c_prep_umr_wqe_common.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_ib/extr_mlx5_ib_mr.c_prep_umr_wqe_common.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ib_pd = type { i32 }
%struct.ib_send_wr = type { i32, i32, %struct.ib_sge*, i32* }
%struct.ib_sge = type { i32, i32, i32 }
%struct.mlx5_ib_dev = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }
%struct.mlx5_umr_wr = type { i32, i32, i32 }

@MLX5_IB_WR_UMR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ib_pd*, %struct.ib_send_wr*, %struct.ib_sge*, i32, i32, i32, i32)* @prep_umr_wqe_common to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @prep_umr_wqe_common(%struct.ib_pd* %0, %struct.ib_send_wr* %1, %struct.ib_sge* %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca %struct.ib_pd*, align 8
  %9 = alloca %struct.ib_send_wr*, align 8
  %10 = alloca %struct.ib_sge*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca %struct.mlx5_ib_dev*, align 8
  %16 = alloca %struct.mlx5_umr_wr*, align 8
  store %struct.ib_pd* %0, %struct.ib_pd** %8, align 8
  store %struct.ib_send_wr* %1, %struct.ib_send_wr** %9, align 8
  store %struct.ib_sge* %2, %struct.ib_sge** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %17 = load %struct.ib_pd*, %struct.ib_pd** %8, align 8
  %18 = getelementptr inbounds %struct.ib_pd, %struct.ib_pd* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call %struct.mlx5_ib_dev* @to_mdev(i32 %19)
  store %struct.mlx5_ib_dev* %20, %struct.mlx5_ib_dev** %15, align 8
  %21 = load %struct.ib_send_wr*, %struct.ib_send_wr** %9, align 8
  %22 = call %struct.mlx5_umr_wr* @umr_wr(%struct.ib_send_wr* %21)
  store %struct.mlx5_umr_wr* %22, %struct.mlx5_umr_wr** %16, align 8
  %23 = load i32, i32* %11, align 4
  %24 = load %struct.ib_sge*, %struct.ib_sge** %10, align 8
  %25 = getelementptr inbounds %struct.ib_sge, %struct.ib_sge* %24, i32 0, i32 2
  store i32 %23, i32* %25, align 4
  %26 = load i32, i32* %12, align 4
  %27 = sext i32 %26 to i64
  %28 = mul i64 4, %27
  %29 = trunc i64 %28 to i32
  %30 = call i32 @ALIGN(i32 %29, i32 64)
  %31 = load %struct.ib_sge*, %struct.ib_sge** %10, align 8
  %32 = getelementptr inbounds %struct.ib_sge, %struct.ib_sge* %31, i32 0, i32 1
  store i32 %30, i32* %32, align 4
  %33 = load %struct.mlx5_ib_dev*, %struct.mlx5_ib_dev** %15, align 8
  %34 = getelementptr inbounds %struct.mlx5_ib_dev, %struct.mlx5_ib_dev* %33, i32 0, i32 0
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 0
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %35, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = load %struct.ib_sge*, %struct.ib_sge** %10, align 8
  %40 = getelementptr inbounds %struct.ib_sge, %struct.ib_sge* %39, i32 0, i32 0
  store i32 %38, i32* %40, align 4
  %41 = load %struct.ib_send_wr*, %struct.ib_send_wr** %9, align 8
  %42 = getelementptr inbounds %struct.ib_send_wr, %struct.ib_send_wr* %41, i32 0, i32 3
  store i32* null, i32** %42, align 8
  %43 = load %struct.ib_sge*, %struct.ib_sge** %10, align 8
  %44 = load %struct.ib_send_wr*, %struct.ib_send_wr** %9, align 8
  %45 = getelementptr inbounds %struct.ib_send_wr, %struct.ib_send_wr* %44, i32 0, i32 2
  store %struct.ib_sge* %43, %struct.ib_sge** %45, align 8
  %46 = load i32, i32* %12, align 4
  %47 = icmp ne i32 %46, 0
  br i1 %47, label %48, label %51

48:                                               ; preds = %7
  %49 = load %struct.ib_send_wr*, %struct.ib_send_wr** %9, align 8
  %50 = getelementptr inbounds %struct.ib_send_wr, %struct.ib_send_wr* %49, i32 0, i32 0
  store i32 1, i32* %50, align 8
  br label %54

51:                                               ; preds = %7
  %52 = load %struct.ib_send_wr*, %struct.ib_send_wr** %9, align 8
  %53 = getelementptr inbounds %struct.ib_send_wr, %struct.ib_send_wr* %52, i32 0, i32 0
  store i32 0, i32* %53, align 8
  br label %54

54:                                               ; preds = %51, %48
  %55 = load i32, i32* @MLX5_IB_WR_UMR, align 4
  %56 = load %struct.ib_send_wr*, %struct.ib_send_wr** %9, align 8
  %57 = getelementptr inbounds %struct.ib_send_wr, %struct.ib_send_wr* %56, i32 0, i32 1
  store i32 %55, i32* %57, align 4
  %58 = load i32, i32* %12, align 4
  %59 = load %struct.mlx5_umr_wr*, %struct.mlx5_umr_wr** %16, align 8
  %60 = getelementptr inbounds %struct.mlx5_umr_wr, %struct.mlx5_umr_wr* %59, i32 0, i32 0
  store i32 %58, i32* %60, align 4
  %61 = load i32, i32* %14, align 4
  %62 = load %struct.mlx5_umr_wr*, %struct.mlx5_umr_wr** %16, align 8
  %63 = getelementptr inbounds %struct.mlx5_umr_wr, %struct.mlx5_umr_wr* %62, i32 0, i32 1
  store i32 %61, i32* %63, align 4
  %64 = load i32, i32* %13, align 4
  %65 = load %struct.mlx5_umr_wr*, %struct.mlx5_umr_wr** %16, align 8
  %66 = getelementptr inbounds %struct.mlx5_umr_wr, %struct.mlx5_umr_wr* %65, i32 0, i32 2
  store i32 %64, i32* %66, align 4
  ret void
}

declare dso_local %struct.mlx5_ib_dev* @to_mdev(i32) #1

declare dso_local %struct.mlx5_umr_wr* @umr_wr(%struct.ib_send_wr*) #1

declare dso_local i32 @ALIGN(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
